Revert "Fix/met 1599 update logic fetch pool offline data resolve confict"