@@ -59,10 +59,10 @@ class PoolOfflineDataStoringServiceTest {
   @Test
   @DisplayName("Should process success pool offline data")
   void insertNonExitPoolData() {
-    when(poolOfflineDataRepository.findPoolOfflineDataByPoolIdIn(anyList()))
-        .thenReturn(Collections.emptyList());
+    when(poolOfflineDataRepository.findPoolOfflineDataHashByPoolMetadataRefIds(anyList()))
+        .thenReturn(Collections.emptySet());
 
-    List<PoolData> successPools = new ArrayList<>();
+    Queue<PoolData> successPools = new LinkedBlockingDeque<>();
 
     String json =
         "{\"name\": \"HOPECHE POOl\",\n"
@@ -89,7 +89,7 @@ class PoolOfflineDataStoringServiceTest {
         .thenReturn(
             List.of(PoolMetadataRef.builder().id(1L).poolHash(pool).hash("123123").build()));
 
-    poolOfflineDataStoringService.saveSuccessPoolOfflineData(successPools);
+    poolOfflineDataStoringService.insertSuccessPoolOfflineData(successPools);
 
     verify(poolOfflineDataRepository, times(1)).saveAll(poolOfflineDataCaptor.capture());
 
@@ -115,8 +115,8 @@ class PoolOfflineDataStoringServiceTest {
             .hash("2")
             .build();
 
-    when(poolOfflineDataRepository.findPoolOfflineDataByPoolIdIn(anyList()))
-        .thenReturn(List.of(poolOfflineData));
+    when(poolOfflineDataRepository.findPoolOfflineDataHashByPoolMetadataRefIds(anyList()))
+        .thenReturn(Set.of(poolOfflineData));
 
     String json =
         "{\"name\": \"HOPECHE POOl\",\n"
@@ -126,8 +126,8 @@ class PoolOfflineDataStoringServiceTest {
             + "\"extended\": \"https://git.io/JnKRd\"\n"
             + "}";
 
-    List<PoolData> poolDataList = new ArrayList<>();
-    poolDataList.add(
+    Queue queue = new LinkedBlockingDeque();
+    queue.add(
         PoolData.builder()
             .poolId(1L)
             .metadataRefId(1L)
@@ -136,10 +136,7 @@ class PoolOfflineDataStoringServiceTest {
             .valid(Boolean.TRUE)
             .build());
 
-    when(poolHashRepository.findByIdIn(anyList())).thenReturn(List.of(pool));
-    when(poolMetadataRefRepository.findByIdIn(anyList())).thenReturn(List.of(poolMetadataRef));
-
-    poolOfflineDataStoringService.saveSuccessPoolOfflineData(poolDataList);
+    poolOfflineDataStoringService.insertSuccessPoolOfflineData(queue);
 
     verify(poolOfflineDataRepository, times(1)).saveAll(poolOfflineDataCaptor.capture());
 
@@ -156,20 +153,59 @@ class PoolOfflineDataStoringServiceTest {
   @Test
   @DisplayName("Should process fetch fail pool offline data with existed pool")
   void insertNonExistFailPoolData() {
+    when(poolOfflineFetchErrorRepository.findPoolOfflineFetchErrorByPoolMetadataRefIn(anyList()))
+        .thenReturn(Collections.emptyList());
+
     PoolHash poolHash = PoolHash.builder().id(1L).hashRaw("1").epochNo(1).build();
 
     PoolMetadataRef poolMetadataRef =
         PoolMetadataRef.builder().id(1L).poolHash(poolHash).hash("123123").build();
 
-    when(poolHashRepository.findByIdIn(anyList())).thenReturn(List.of(poolHash));
-    when(poolMetadataRefRepository.findByIdIn(anyList())).thenReturn(List.of(poolMetadataRef));
-    when(poolOfflineFetchErrorRepository.findByPoolHashAndPoolMetadataRef(any(), any()))
-        .thenReturn(PoolOfflineFetchError.builder()
-                        .id(1L)
-                        .retryCount(1)
-                        .build());
+    when(poolHashRepository.findByIdIn(anyList())).thenReturn(Collections.emptyList());
 
-    poolOfflineDataStoringService.saveFailOfflineData(
+    when(poolMetadataRefRepository.findByIdIn(anyList())).thenReturn(Collections.emptyList());
+
+    poolOfflineDataStoringService.insertFailOfflineData(
+        List.of(
+            PoolData.builder()
+                .poolId(1L)
+                .metadataRefId(1L)
+                .hash("1")
+                .errorMessage("error ")
+                .build()));
+
+    verify(poolOfflineFetchErrorRepository, times(1))
+        .saveAll(poolOfflineFetchErrorCaptor.capture());
+  }
+
+  @Test
+  @DisplayName("Should process fetch fail pool offline data with existed pool")
+  void insertExistFailPoolData() {
+    PoolHash poolHash = PoolHash.builder().id(1L).hashRaw("1").epochNo(1).build();
+
+    PoolMetadataRef poolMetadataRef =
+        PoolMetadataRef.builder().id(1L).poolHash(poolHash).hash("123123").build();
+
+    PoolOfflineFetchError error =
+        PoolOfflineFetchError.builder()
+            .id(1L)
+            .poolHash(poolHash)
+            .poolMetadataRef(poolMetadataRef)
+            .retryCount(BigInteger.ONE.intValue())
+            .fetchError("errrot")
+            .build();
+
+    when(poolHashRepository.findByIdIn(any())).thenReturn(List.of(poolHash));
+
+    when(poolMetadataRefRepository.findByIdIn(any())).thenReturn(List.of(poolMetadataRef));
+
+    when(poolOfflineFetchErrorRepository.findPoolOfflineFetchErrorByPoolMetadataRefIn(anyList()))
+        .thenReturn(Collections.emptyList());
+
+    when(poolOfflineFetchErrorRepository.findPoolOfflineFetchErrorByPoolMetadataRefIn(anyList()))
+        .thenReturn(List.of(error));
+
+    poolOfflineDataStoringService.insertFailOfflineData(
         List.of(
             PoolData.builder()
                 .poolId(1L)
@@ -183,33 +219,8 @@ class PoolOfflineDataStoringServiceTest {
 
     PoolOfflineFetchError actualError =
         new ArrayList<>(poolOfflineFetchErrorCaptor.getValue()).get(0);
+
     Assertions.assertEquals(1L, actualError.getId());
     Assertions.assertEquals(2, actualError.getRetryCount());
-  }
-
-  @Test
-  @DisplayName("Should process fetch fail pool offline data with not existed pool")
-  void insertExistFailPoolData() {
-    PoolHash poolHash = PoolHash.builder().id(1L).hashRaw("1").epochNo(1).build();
-
-    PoolMetadataRef poolMetadataRef =
-        PoolMetadataRef.builder().id(1L).poolHash(poolHash).hash("123123").build();
-
-    when(poolHashRepository.findByIdIn(anyList())).thenReturn(List.of(poolHash));
-    when(poolMetadataRefRepository.findByIdIn(anyList())).thenReturn(List.of(poolMetadataRef));
-    when(poolOfflineFetchErrorRepository.findByPoolHashAndPoolMetadataRef(any(), any()))
-        .thenReturn(null);
-
-    poolOfflineDataStoringService.saveFailOfflineData(
-        List.of(
-            PoolData.builder()
-                .poolId(1L)
-                .metadataRefId(1L)
-                .hash("1")
-                .errorMessage("error ")
-                .build()));
-
-    verify(poolOfflineFetchErrorRepository, times(1))
-        .saveAll(poolOfflineFetchErrorCaptor.capture());
   }
 }
